💄 Add min height to prevent jumping issue

--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -8,8 +8,16 @@
 .headerContainer {
   display: flex;
   gap: 1.5rem;
+  min-height: 2.5rem;
+}
+.flagGap {
+  justify-content: space-between;
 }
 .backBtn {
   border: none;
   background-color: transparent;
+}
+h1 {
+  margin: 0;
+  font-size: 1.7rem;
 }
